@@ -1,3 +1,10 @@
+2018-01-05  Karl Berry  <karl@freefriends.org>
+
+	* pathsearch.c (dir_list_search, dir_list_search_list): save the
+	next element to continue the loop, in case the
+	current element floats. Report from Douglas McKenna,
+	tex-k mail 4 Jan 2018 10:16:18.
+
 2017-12-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* xbasename.c, xdirname.c: Remove IS_KANJI test for UNC names,
